--- a/project-layout/style.css
+++ b/project-layout/style.css
@@ -1,13 +1,10 @@
 body {
-    margin:0;
+    margin: 0 auto;
 }
-.container {
-    display: flex;
-    flex-direction: column;
-}
+
 .zone {
-    cursor:pointer;
-    display:inline-block;
+    /*padding:30px 50px;*/
+    /*cursor:pointer;*/
     color:#FFF;
     font-size:2em;
     border-radius:4px;
@@ -21,38 +18,80 @@ body {
     -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }
-.green > ul {
-    list-style-type: none;
-    height: 100%;
+
+/***********************************************************************
+ *  Nav Bar
+ **********************************************************************/
+.main-nav {
+    display: flex;
+    list-style: none;
     margin: 0;
-    padding: 0;
+    font-size: 0.7em;
 }
 
-.green > ul > li {
-    display: inline-block;
-    padding: 1rem 2rem;
-    margin: 0;
-    height: 100%;
+@media only screen and (max-width: 600px) {
+    .main-nav {
+        font-size: 0.5em;
+        padding: 0;
+    }
 }
-.green > ul > li > a {
-    text-decoration: none;
-    color: #fff;
-}
-.green {
-    font-size: 1.2rem;
+
+.push {
+    margin-left: auto;
 }
 
 li {
-    float: left;
+    padding: 20px;
 }
-li:last-child {
-    float: right;
+
+a {
+    color: #f5f5f6;
+    text-decoration: none;
 }
+    
+
+/***********************************************************************
+ *  Cover
+ **********************************************************************/
+.container {
+    /*show heigh: auto*/
+    height: 50vh; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/***********************************************************************
+ *  Grid Panel
+ **********************************************************************/
+.grid-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-gap: 20px;
+}
+
+.box {
+    background-color: #444;
+    padding: 130px;
+    margin: 20px;
+}
+
+.box > img {
+    width: 100%;
+}
+
+/***********************************************************************
+ *  Footer
+ **********************************************************************/
+footer {
+    text-align: center;
+}
+
 /*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
 /***********************************************************************
  *  Green Background
  **********************************************************************/
-.green{
+.green {
     background: #56B870; /* Old browsers */
     background: -moz-linear-gradient(top, #56B870 0%, #a5c956 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#56B870), color-stop(100%,#a5c956)); /* Chrome,Safari4+ */
@@ -65,7 +104,7 @@ li:last-child {
 /***********************************************************************
  *  Red Background
  **********************************************************************/
-.red{
+.red {
     background: #C655BE; /* Old browsers */
     background: -moz-linear-gradient(top, #C655BE 0%, #cf0404 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#C655BE), color-stop(100%,#cf0404)); /* Chrome,Safari4+ */
@@ -78,7 +117,7 @@ li:last-child {
 /***********************************************************************
  *  Yellow Background
  **********************************************************************/
-.yellow{
+.yellow {
     background: #F3AAAA; /* Old browsers */
     background: -moz-linear-gradient(top, #F3AAAA 0%, #febf04 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#F3AAAA), color-stop(100%,#febf04)); /* Chrome,Safari4+ */
@@ -91,7 +130,7 @@ li:last-child {
 /***********************************************************************
  *  Blue Background
  **********************************************************************/
-.blue{
+.blue {
     background: #7abcff; /* Old browsers */
     background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
@@ -99,22 +138,4 @@ li:last-child {
     background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
     background: linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
-}
-
-@media only screen and (max-width: 518px) {
-    html {
-        font-size: 14px;
-    }
-}
-
-@media only screen and (max-width: 453px){
-    html {
-        font-size: 10px;
-    }
-}
-
-@media only screen and (max-width: 300) {
-    html {
-        font-size: 10px;
-    }
 }
