--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 
 .green > ul > li {
     display: inline-block;
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     margin: 0;
     height: 100%;
 }
@@ -109,12 +109,12 @@ li:last-child {
 
 @media only screen and (max-width: 453px){
     html {
-        font-size: 10px;
+        font-size: 14.5px;
     }
 }
 
-@media only screen and (max-width: 300) {
+@media only screen and (max-width: 300px) {
     html {
-        font-size: 10px;
+        font-size: 11.4px;
     }
 }
